--- a/cp2122t/cp2122t.tex
+++ b/cp2122t/cp2122t.tex
@@ -1176,9 +1176,34 @@ textos, inc.\ diagramas que expliquem como se chegou às soluções encontradas.
 Valoriza-se a escrita de \emph{pouco} código que corresponda a soluções
 simples e elegantes.
 
+
 \subsection*{Problema 1} \label{pg:P1}
 
-Apresentar cálculos aqui, se desejável acompanhados de diagramas, etc.
+Pretendemos demonstrar que \start{ \ensuremath{\Varid{loop}\;\Varid{d}\mathrel{=}\Varid{aux}\;\Varid{d}} }. Para tal começamos por trabalhar na 
+seguinte equação.
+
+\begin{hscode}\SaveRestoreHook
+\ColumnHook
+\end{hscode}\resethooks
+\begin{eqnarray}
+\start
+     \ensuremath{\begin{lcbr}(\Varid{q}\;\Varid{d})\comp \mathbf{in}\mathrel{=}\Varid{f}\comp \fun F \;\conj{\Varid{q}\;\Varid{d}}{\conj{\Varid{r}\;\Varid{d}}{\Varid{c}\;\Varid{d}}}\\(\Varid{r}\;\Varid{d})\comp \mathbf{in}\mathrel{=}\Varid{g}\comp \fun F \;\conj{\Varid{q}\;\Varid{d}}{\conj{\Varid{r}\;\Varid{d}}{\Varid{c}\;\Varid{d}}}\\(\Varid{c}\;\Varid{d})\comp \mathbf{in}\mathrel{=}\Varid{h}\comp \fun F \;\conj{\Varid{q}\;\Varid{d}}{\conj{\Varid{r}\;\Varid{d}}{\Varid{c}\;\Varid{d}}}\end{lcbr}}
+%
+\equiv{ \ensuremath{\conj{\Varid{q}\;\Varid{d}}{\conj{\Varid{r}\;\Varid{d}}{\Varid{c}\;\Varid{d}}}\mathrel{=}\cataList{\conj{\Varid{f}}{\conj{\Varid{g}}{\Varid{h}}}}} }
+\just\equiv{ definição de in; functor dos naturais; def-aux }
+%
+     \ensuremath{\begin{lcbr}(\Varid{q}\;\Varid{d})\comp \alt{\underline{\mathrm{0}}}{\succ }\mathrel{=}\Varid{f}\comp (\Varid{id}\mathbin{+}\conj{\Varid{q}\;\Varid{d}}{\conj{\Varid{r}\;\Varid{d}}{\Varid{c}\;\Varid{d}}})\\(\Varid{r}\;\Varid{d})\comp \alt{\underline{\mathrm{0}}}{\succ }\mathrel{=}\Varid{g}\comp (\Varid{id}\mathbin{+}\conj{\Varid{q}\;\Varid{d}}{\conj{\Varid{r}\;\Varid{d}}{\Varid{c}\;\Varid{d}}})\\(\Varid{c}\;\Varid{d})\comp \alt{\underline{\mathrm{0}}}{\succ }\mathrel{=}\Varid{h}\comp (\Varid{id}\mathbin{+}\conj{\Varid{q}\;\Varid{d}}{\conj{\Varid{r}\;\Varid{d}}{\Varid{c}\;\Varid{d}}})\end{lcbr}}
+%
+\equiv { \ensuremath{\Varid{aux}\;\Varid{d}\mathrel{=}\cataList{\conj{\Varid{f}}{\conj{\Varid{g}}{\Varid{h}}}}} }
+\just\equiv{ fusão-+; reflexão-+; eq-+; igualdade extensional; def-comp; def-split; def-x }
+%
+     \ensuremath{\begin{lcbr}\begin{lcbr}(\Varid{q}\;\Varid{d})\;\mathrm{0}\mathrel{=}\Varid{a}\\(\Varid{q}\;\Varid{d})\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}f_2 \;(\Varid{q}\;\Varid{d}\;\Varid{n},(\Varid{r}\;\Varid{d}\;\Varid{n},\Varid{c}\;\Varid{d}\;\Varid{n}))\end{lcbr}\\\begin{lcbr}(\Varid{r}\;\Varid{d})\;\mathrm{0}\mathrel{=}\Varid{b}\\(\Varid{r}\;\Varid{d})\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}g_2 \;(\Varid{q}\;\Varid{d}\;\Varid{n},(\Varid{r}\;\Varid{d}\;\Varid{n},\Varid{c}\;\Varid{d}\;\Varid{n}))\end{lcbr}\\\begin{lcbr}(\Varid{c}\;\Varid{d})\;\mathrm{0}\mathrel{=}\Varid{c}\\(\Varid{c}\;\Varid{d})\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}h_2 \;(\Varid{q}\;\Varid{d}\;\Varid{n},(\Varid{r}\;\Varid{d}\;\Varid{n},\Varid{c}\;\Varid{d}\;\Varid{n}))\end{lcbr}\end{lcbr}}
+%
+\equiv{ \ensuremath{\Varid{aux}\;\Varid{d}\mathrel{=}\cataList{\conj{\alt{\underline{\Varid{a}}}{f_2 }}{\conj{\alt{\underline{\Varid{b}}}{g_2 }}{\alt{\underline{\Varid{c}}}{h_2 }}}}} }
+%
+\end{eqnarray}
+
+Vamos agora fazer algumas alterações à forma como expressamos as seguintes funções:
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -1188,31 +1213,25 @@ Apresentar cálculos aqui, se desejável acompanhados de diagramas, etc.
 \>[B]{}\Varid{q}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}\Varid{q}\;\Varid{d}\;\Varid{n}\mathbin{+}(\mathbf{if}\;(\Varid{c}\;\Varid{d}\;\Varid{n})\equiv \mathrm{0}\;\mathbf{then}\;\mathrm{1}\;\mathbf{else}\;\mathrm{0}){}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-\begin{eqnarray*}
+\begin{eqnarray}
 \start
      \ensuremath{\begin{lcbr}\Varid{q}\;\Varid{d}\;\mathrm{0}\mathrel{=}\mathrm{0}\\\Varid{q}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}\Varid{q}\;\Varid{d}\;\Varid{n}\mathbin{+}(\mathbf{if}\;(\Varid{c}\;\Varid{d}\;\Varid{n})\equiv \mathrm{0}\;\mathbf{then}\;\mathrm{1}\;\mathbf{else}\;\mathrm{0})\end{lcbr}}
 %
-\just\equiv{ def-zero, def-succ, soma de um if é igual ao if da soma }
+\just\equiv{ def-succ; 1ª lei de fusão do condicional }
 %
-     \ensuremath{\begin{lcbr}(\Varid{q}\;\Varid{d})\comp \underline{\mathrm{0}}\mathrel{=}\underline{\mathrm{0}}\\(\Varid{q}\;\Varid{d})\comp \succ \;\Varid{n}\mathrel{=}\mathbf{if}\;(\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d})\;\Varid{n}\;\mathbf{then}\;\succ \comp (\Varid{q}\;\Varid{d})\;\Varid{n}\;\mathbf{else}\;(\Varid{q}\;\Varid{d})\;\Varid{n}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{q}\;\Varid{d}\;\mathrm{0}\mathrel{=}\mathrm{0}\\\Varid{q}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}\mathbf{if}\;(\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}\;\Varid{n})\;\mathbf{then}\;\succ \comp (\Varid{q}\;\Varid{d}\;\Varid{n})\;\mathbf{else}\;(\Varid{q}\;\Varid{d}\;\Varid{n})\end{lcbr}}
 %
 \just\equiv{ def-cond }
 %
-     \ensuremath{\begin{lcbr}(\Varid{q}\;\Varid{d})\comp \underline{\mathrm{0}}\mathrel{=}\underline{\mathrm{0}}\\(\Varid{q}\;\Varid{d})\comp \succ \;\Varid{n}\mathrel{=}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d})\to \succ \comp (\Varid{q}\;\Varid{d}),(\Varid{q}\;\Varid{d}))\;\Varid{n}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{q}\;\Varid{d}\;\mathrm{0}\mathrel{=}\mathrm{0}\\\Varid{q}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}\;\Varid{n})\to \succ \comp (\Varid{q}\;\Varid{d}\;\Varid{n}),(\Varid{q}\;\Varid{d}\;\Varid{n}))\end{lcbr}}
 %
-\just\equiv{ igualdade extensional, eq-x, fusão-x }
+\just\equiv{ def condicional de McCarthy }
 %
-     \ensuremath{(\Varid{q}\;\Varid{d})\comp \alt{\underline{\mathrm{0}}}{\succ }\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d})\to \succ \comp (\Varid{q}\;\Varid{d}),(\Varid{q}\;\Varid{d}))\mskip1.5mu]}
+     \ensuremath{\begin{lcbr}\Varid{q}\;\Varid{d}\;\mathrm{0}\mathrel{=}\mathrm{0}\\\Varid{q}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}[\mskip1.5mu \succ \comp (\Varid{q}\;\Varid{d}\;\Varid{n}),(\Varid{q}\;\Varid{d}\;\Varid{n})\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}\;\Varid{n}))\mathbin{?}\end{lcbr}}
 %
-\just\equiv{ def-in, def condicional de McCarthy }
-%
-     \ensuremath{(\Varid{q}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},[\mskip1.5mu \succ \comp (\Varid{q}\;\Varid{d}),(\Varid{q}\;\Varid{d})\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?}\mskip1.5mu]}
-%
-\just\equiv{ natural-id, absorção-+ }
-%
-     \ensuremath{(\Varid{q}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},[\mskip1.5mu \succ \comp (\Varid{q}\;\Varid{d}),(\Varid{q}\;\Varid{d})\mskip1.5mu]\mskip1.5mu]\comp (\Varid{id}\mathbin{+}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?})}
-\qed
-\end{eqnarray*}
+\end{eqnarray}
+
+\newpage
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -1222,27 +1241,19 @@ Apresentar cálculos aqui, se desejável acompanhados de diagramas, etc.
 \>[B]{}\Varid{r}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}\mathbf{if}\;(\Varid{c}\;\Varid{d}\;\Varid{n})\equiv \mathrm{0}\;\mathbf{then}\;\mathrm{0}\;\mathbf{else}\;\mathrm{1}\mathbin{+}\Varid{r}\;\Varid{d}\;\Varid{n}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-\begin{eqnarray*}
+\begin{eqnarray}
 \start
      \ensuremath{\begin{lcbr}\Varid{r}\;\Varid{d}\;\mathrm{0}\mathrel{=}\mathrm{0}\\\Varid{r}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}\mathbf{if}\;(\Varid{c}\;\Varid{d}\;\Varid{n})\equiv \mathrm{0}\;\mathbf{then}\;\mathrm{0}\;\mathbf{else}\;\mathrm{1}\mathbin{+}\Varid{r}\;\Varid{d}\;\Varid{n}\end{lcbr}}
 %
-\just\equiv{ def-zero, def-succ, def-cond }
+\just\equiv{ def-succ; def-cond }
 %
-     \ensuremath{\begin{lcbr}(\Varid{r}\;\Varid{d})\comp \underline{\mathrm{0}}\mathrel{=}\underline{\mathrm{0}}\\(\Varid{r}\;\Varid{d})\comp \succ \;\Varid{n}\mathrel{=}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d})\to \underline{\mathrm{0}},\succ \comp (\Varid{r}\;\Varid{d}))\;\Varid{n}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{r}\;\Varid{d}\;\mathrm{0}\mathrel{=}\mathrm{0}\\\Varid{r}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}\;\Varid{n})\to \underline{\mathrm{0}},\succ \comp (\Varid{r}\;\Varid{d}\;\Varid{n}))\;\Varid{n}\end{lcbr}}
 %
-\just\equiv{ igualdade extensional, eq-x, fusão-x, def-in }
+\just\equiv{ def condicional de McCarthy }
 %
-     \ensuremath{(\Varid{r}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d})\to \underline{\mathrm{0}},\succ \comp (\Varid{r}\;\Varid{d}))\mskip1.5mu]}
+     \ensuremath{\begin{lcbr}\Varid{r}\;\Varid{d}\;\mathrm{0}\mathrel{=}\mathrm{0}\\\Varid{r}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},\succ \comp (\Varid{r}\;\Varid{d}\;\Varid{n})\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}\;\Varid{n}))\mathbin{?}\end{lcbr}}
 %
-\just\equiv{ def condicional de McCarthy, natural-id }
-%
-     \ensuremath{(\Varid{r}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}}\comp \Varid{id},[\mskip1.5mu \underline{\mathrm{0}},\succ \comp (\Varid{r}\;\Varid{d})\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?}\mskip1.5mu]}
-%
-\just\equiv{ absorção-+ }
-%
-     \ensuremath{(\Varid{r}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},[\mskip1.5mu \underline{\mathrm{0}},\succ \comp (\Varid{r}\;\Varid{d})\mskip1.5mu]\mskip1.5mu]\comp (\Varid{id}\mathbin{+}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?})}
-\qed
-\end{eqnarray*}
+\end{eqnarray}
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
@@ -1252,54 +1263,97 @@ Apresentar cálculos aqui, se desejável acompanhados de diagramas, etc.
 \>[B]{}\Varid{c}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}\mathbf{if}\;(\Varid{c}\;\Varid{d}\;\Varid{n})\equiv \mathrm{0}\;\mathbf{then}\;\Varid{d}\;\mathbf{else}\;(\Varid{c}\;\Varid{d}\;\Varid{n})\mathbin{-}\mathrm{1}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
-\begin{eqnarray*}
+\begin{eqnarray}
 \start
      \ensuremath{\begin{lcbr}\Varid{c}\;\Varid{d}\;\mathrm{0}\mathrel{=}\Varid{d}\\\Varid{c}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}\mathbf{if}\;(\Varid{c}\;\Varid{d}\;\Varid{n})\equiv \mathrm{0}\;\mathbf{then}\;\Varid{d}\;\mathbf{else}\;(\Varid{c}\;\Varid{d}\;\Varid{n})\mathbin{-}\mathrm{1}\end{lcbr}}
 %
-\just\equiv{ def-zero, def-succ, def-pred, def-cond }
+\just\equiv{ def-pred; def-cond }
 %
-     \ensuremath{\begin{lcbr}(\Varid{c}\;\Varid{d})\comp \underline{\mathrm{0}}\mathrel{=}\underline{\Varid{d}}\\(\Varid{c}\;\Varid{d})\comp \succ \;\Varid{n}\mathrel{=}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d})\to \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d}))\;\Varid{n}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{c}\;\Varid{d}\;\mathrm{0}\mathrel{=}\Varid{d}\\\Varid{c}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}\;\Varid{n})\to \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d}\;\Varid{n}))\end{lcbr}}
 %
-\just\equiv{ igualdade extensional, eq-x, fusão-x, def-in }
+\just\equiv{ def condicional de McCarthy }
 %
-     \ensuremath{(\Varid{c}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\Varid{d}},((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d})\to \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d}))\mskip1.5mu]}
+     \ensuremath{\begin{lcbr}\Varid{c}\;\Varid{d}\;\mathrm{0}\mathrel{=}\Varid{d}\\\Varid{c}\;\Varid{d}\;(\Varid{n}\mathbin{+}\mathrm{1})\mathrel{=}[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d}\;\Varid{n})\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}\;\Varid{n}))\mathbin{?}\end{lcbr}}
 %
-\just\equiv{ def condicional de McCarthy, natural-id }
-%
-     \ensuremath{(\Varid{c}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\Varid{d}}\comp \Varid{id},[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d})\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?}\mskip1.5mu]}
-%
-\just\equiv{ absorção-+ }
-%
-     \ensuremath{(\Varid{c}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\Varid{d}},[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d})\mskip1.5mu]\mskip1.5mu]\comp (\Varid{id}\mathbin{+}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?})}
-\qed
-\end{eqnarray*}
+\end{eqnarray}
+
+
+Pelos pontos 4, 8, 11, e 14 obtemos:
 
 \begin{hscode}\SaveRestoreHook
 \column{B}{@{}>{\hspre}l<{\hspost}@{}}%
-\column{6}{@{}>{\hspre}l<{\hspost}@{}}%
 \column{E}{@{}>{\hspre}l<{\hspost}@{}}%
-\>[B]{}\Varid{loop}\;\Varid{d}\mathrel{=}\for{(\Varid{g}\;\Varid{d})}\ {(\mathrm{0},(\mathrm{0},\Varid{d}))}\;\mathbf{where}{}\<[E]%
+\>[B]{}\Varid{a}\mathrel{=}\Varid{b}\mathrel{=}\mathrm{0}{}\<[E]%
 \\
-\>[B]{}\hsindent{6}{}\<[6]%
-\>[6]{}\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\mathrm{0}))\mathrel{=}(\Varid{q}\mathbin{+}\mathrm{1},(\mathrm{0},\Varid{d})){}\<[E]%
+\>[B]{}\Varid{c}\mathrel{=}\Varid{d}{}\<[E]%
 \\
-\>[B]{}\hsindent{6}{}\<[6]%
-\>[6]{}\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\Varid{c}\mathbin{+}\mathrm{1}))\mathrel{=}(\Varid{q},(\Varid{r}\mathbin{+}\mathrm{1},\Varid{c})){}\<[E]%
+\>[B]{}f_2 \mathrel{=}[\mskip1.5mu \succ \comp \p1,\p1\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp \p2\comp \p2)\mathbin{?}{}\<[E]%
+\\
+\>[B]{}g_2 \mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},\succ \comp \p1\comp \p2\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp \p2\comp \p2)\mathbin{?}{}\<[E]%
+\\
+\>[B]{}h_2 \mathrel{=}[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp \p2\comp \p2\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp \p2\comp \p2)\mathbin{?}{}\<[E]%
 \ColumnHook
 \end{hscode}\resethooks
+
+Ficando assim com:
+
 \begin{eqnarray*}
 \start
-     \ensuremath{\begin{lcbr}(\Varid{q}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},[\mskip1.5mu \succ \comp (\Varid{q}\;\Varid{d}),(\Varid{q}\;\Varid{d})\mskip1.5mu]\mskip1.5mu]\comp (\Varid{id}\mathbin{+}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?})\\(\Varid{r}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\mathrm{0}},[\mskip1.5mu \underline{\mathrm{0}},\succ \comp (\Varid{r}\;\Varid{d})\mskip1.5mu]\mskip1.5mu]\comp (\Varid{id}\mathbin{+}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?})\\(\Varid{c}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\Varid{d}},[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d})\mskip1.5mu]\mskip1.5mu]\comp (\Varid{id}\mathbin{+}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?})\end{lcbr}}
 %
-\just\equiv{ def condicional de McCarthy, natural-id }
+     \ensuremath{\Varid{aux}\;\Varid{d}\mathrel{=}\cataList{\conj{\alt{\underline{\mathrm{0}}}{f_2 }}{\conj{\alt{\underline{\mathrm{0}}}{g_2 }}{\alt{\underline{\Varid{d}}}{h_2 }}}}}
 %
-     \ensuremath{(\Varid{c}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\Varid{d}}\comp \Varid{id},[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d})\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?}\mskip1.5mu]}
+\just\equiv{ def-for }
 %
-\just\equiv{ absorção-+ }
+     \ensuremath{\Varid{aux}\;\Varid{d}\mathrel{=}\for{\conj{f_2 }{\conj{g_2 }{h_2 }}}\ {(\underline{\mathrm{0}},\underline{\mathrm{0}},\underline{\Varid{d}})}}
 %
-     \ensuremath{(\Varid{c}\;\Varid{d})\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \underline{\Varid{d}},[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp (\Varid{c}\;\Varid{d})\mskip1.5mu]\mskip1.5mu]\comp (\Varid{id}\mathbin{+}((\mathrm{0}\equiv )\comp (\Varid{c}\;\Varid{d}))\mathbin{?})}
+\end{eqnarray*}
+
+\newpage
+
+Neste ponto já estámos bastante próximos da definição do \start{ \ensuremath{\Varid{loop}\;\Varid{d}} } basta-nos demonstrar
+a igualdade entre \start{ \ensuremath{\Varid{g}\;\Varid{d}} } e \start{ \ensuremath{\conj{f_2 }{\conj{g_2 }{h_2 }}} }
+
+\begin{eqnarray*}
+\start
+%
+     \ensuremath{\Varid{g}\;\Varid{d}\mathrel{=}\conj{f_2 }{\conj{g_2 }{h_2 }}}
+%
+\just\equiv{ def-g2; def-h2 }
+%
+     \ensuremath{\Varid{g}\;\Varid{d}\mathrel{=}\conj{f_2 }{\conj{[\mskip1.5mu \underline{\mathrm{0}},\succ \comp \p1\comp \p2\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp \p2\comp \p2)\mathbin{?}}{[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp \p2\comp \p2\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp \p2\comp \p2)\mathbin{?}}}}
+%
+\just\equiv{ fusão-x; }
+%
+     \ensuremath{\Varid{g}\;\Varid{d}\mathrel{=}\conj{f_2 }{\conj{[\mskip1.5mu \underline{\mathrm{0}},\succ \comp \p1\comp \p2\mskip1.5mu]}{[\mskip1.5mu \underline{\Varid{d}},\Varid{pred}\comp \p2\comp \p2\mskip1.5mu]}\comp (((\mathrm{0}\equiv )\comp \p2\comp \p2)\mathbin{?})}}
+%
+\just\equiv{ lei de troca; def-f2; fusão-x }
+%
+     \ensuremath{\Varid{g}\;\Varid{d}\mathrel{=}\conj{[\mskip1.5mu \succ \comp \p1,\p1\mskip1.5mu]}{[\mskip1.5mu \conj{\underline{\mathrm{0}}}{\underline{\Varid{d}}},\conj{\succ \comp \p1\comp \p2}{\Varid{pred}\comp \p2\comp \p2}\mskip1.5mu]}\comp ((\mathrm{0}\equiv )\comp \p2\comp \p2)\mathbin{?}}
+%
+\just\equiv{ lei da troca; igualdade extensional }
+%
+     \ensuremath{\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\Varid{c}))\mathrel{=}[\mskip1.5mu \conj{\succ \comp \p1}{\conj{\underline{\mathrm{0}}}{\underline{\Varid{d}}}},\conj{\p1}{\conj{\succ \comp \p1\comp \p2}{\Varid{pred}\comp \p2\comp \p2}}\mskip1.5mu]\comp ((\mathrm{0}\equiv )\comp \p2\comp \p2)\mathbin{?}(\Varid{q},(\Varid{r},\Varid{c}))}
+%
+\just\equiv{ 2ª lei de fusão do condicional }
+%
+     \ensuremath{\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\Varid{c}))\mathrel{=}[\mskip1.5mu \conj{\succ \;\Varid{q}}{\conj{\underline{\mathrm{0}}}{\underline{\Varid{d}}}},\conj{\Varid{q}}{\conj{\succ \;\Varid{r}}{\Varid{pred}\;\Varid{c}}}\mskip1.5mu]\comp (\mathrm{0}\equiv \Varid{c})\mathbin{?}}
+%
+\just\equiv{ def-split }
+%
+     \ensuremath{\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\Varid{c}))\mathrel{=}[\mskip1.5mu (\succ \;\Varid{q},(\underline{\mathrm{0}},\underline{\Varid{d}})),(\Varid{q},(\succ \;\Varid{r},\Varid{pred}\;\Varid{c}))\mskip1.5mu]\comp (\mathrm{0}\equiv \Varid{c})\mathbin{?}}
+%
+\just\equiv{ eq-+??? }
+%
+     \ensuremath{\begin{lcbr}\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\mathrm{0}))\mathrel{=}(\succ \;\Varid{q},(\underline{\mathrm{0}},\underline{\Varid{d}}))\\\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\Varid{c}))\mathrel{=}(\Varid{q},(\succ \;\Varid{r},\Varid{pred}\;\Varid{c}))\end{lcbr}}
+%
+\just\equiv{ def-succ, def-pred }
+%
+     \ensuremath{\begin{lcbr}\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\mathrm{0}))\mathrel{=}(\Varid{q}\mathbin{+}\mathrm{1},(\mathrm{0},\Varid{d}))\\\Varid{g}\;\Varid{d}\;(\Varid{q},(\Varid{r},\Varid{c}))\mathrel{=}(\Varid{q},(\Varid{r}\mathbin{+}\mathrm{1},\Varid{c}\mathbin{-}\mathrm{1}))\end{lcbr}}
+%
 \qed
 \end{eqnarray*}
+
+\newpage
 
 \subsection*{Problema 2}
 \begin{eqnarray*}
@@ -1328,30 +1382,30 @@ Apresentar cálculos aqui, se desejável acompanhados de diagramas, etc.
 %
 \just\equiv{ def-functor }
 %
-     \ensuremath{\begin{lcbr}\Varid{alice}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \Conid{F}\;\Varid{bob}\\\Varid{bob}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \Conid{F}\;\Varid{alice}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{alice}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \fun F \;\Varid{bob}\\\Varid{bob}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \fun F \;\Varid{alice}\end{lcbr}}
 %
 \just\equiv{ def-out }
 %
-     \ensuremath{\begin{lcbr}\Varid{alice}\comp \mathbf{in}\comp \Varid{out}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \Conid{F}\;\Varid{bob}\comp \Varid{out}\\\Varid{bob}\comp \mathbf{in}\comp \Varid{out}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \Conid{F}\;\Varid{alice}\comp \Varid{out}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{alice}\comp \mathbf{in}\comp \Varid{out}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \fun F \;\Varid{bob}\comp \Varid{out}\\\Varid{bob}\comp \mathbf{in}\comp \Varid{out}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \fun F \;\Varid{alice}\comp \Varid{out}\end{lcbr}}
 %
 \just\equiv{ in . out = id }
 %
-     \ensuremath{\begin{lcbr}\Varid{alice}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \Conid{F}\;\Varid{bob}\comp \Varid{out}\\\Varid{bob}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \Conid{F}\;\Varid{alice}\comp \Varid{out}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{alice}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \fun F \;\Varid{bob}\comp \Varid{out}\\\Varid{bob}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \fun F \;\Varid{alice}\comp \Varid{out}\end{lcbr}}
 %
 \just\equiv{ eq-x }
 %
-     \ensuremath{\conj{\Varid{alice}}{\Varid{bob}}\mathrel{=}\conj{[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \Conid{F}\;\Varid{bob}\comp \Varid{out}}{[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \Conid{F}\;\Varid{alice}\comp \Varid{out}}}
+     \ensuremath{\conj{\Varid{alice}}{\Varid{bob}}\mathrel{=}\conj{[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \fun F \;\Varid{bob}\comp \Varid{out}}{[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \fun F \;\Varid{alice}\comp \Varid{out}}}
 \qed
 \end{eqnarray*}
-E assim podemos definir o both como um split alice bob
+E assim podemos definir o \start{ \ensuremath{\Varid{both}} } como um \start{ \ensuremath{\conj{\Varid{alice}}{\Varid{bob}}} }
 
 \begin{eqnarray*}
 \start
-     \ensuremath{\begin{lcbr}\Varid{alice}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \Conid{F}\;\Varid{bob}\\\Varid{bob}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \Conid{F}\;\Varid{alice}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{alice}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \fun F \;\Varid{bob}\\\Varid{bob}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \fun F \;\Varid{alice}\end{lcbr}}
 %
 \just\equiv{ cancelamento-x }
 %
-     \ensuremath{\begin{lcbr}\Varid{alice}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \p2\comp \conj{\Conid{F}\;\Varid{alice}}{\Conid{F}\;\Varid{bob}}\\\Varid{bob}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \p1\comp \conj{\Conid{F}\;\Varid{alice}}{\Conid{F}\;\Varid{bob}}\end{lcbr}}
+     \ensuremath{\begin{lcbr}\Varid{alice}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{max}}\mskip1.5mu]\comp \p2\comp \conj{\fun F \;\Varid{alice}}{\fun F \;\Varid{bob}}\\\Varid{bob}\comp \mathbf{in}\mathrel{=}[\mskip1.5mu \Varid{id},\uncurry{\Varid{min}}\mskip1.5mu]\comp \p1\comp \conj{\fun F \;\Varid{alice}}{\fun F \;\Varid{bob}}\end{lcbr}}
 %
 \just\equiv{ fokkinga }
 %
